# bits-and-bytes-website

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  index.html  style.css
assets/: index.html
migrations/: 001-create-time-table.sql  002-create-day-table.sql  003-create-chapters-table.sql  004-create-topics-table.sql  005-create-projects-table.sql
src/: auth.rs  main.rs
