[package]
name = "bits-and-bytes-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
axum = "0.7.4"
serde = { version = "1.0.197", features = ["derive"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
