[package]
name = "bits-and-bytes-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
axum = "0.7.4"
once_cell = "1.19.0"
axum-extra = { version = "0.9.2", features = ["typed-header"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
serde = { version = "1.0.197", features = ["derive"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace", "cors"] }
headers = "0.4.0"
futures = "0.3"
futures-util = "0.3.30"
libsql = "0.3.1"
log = "0.4.21"
jsonwebtoken = "9.2.0"
serde_json = "1.0.114"
reqwest = { version = "0.11.26", features = ["json"] }
